fixied main menu on mobile

--- a/src/scss/_global.scss
+++ b/src/scss/_global.scss
@@ -195,8 +195,8 @@ img {
 		span {
 			&:first-child {
 				transform: rotate(45deg);
-				top: 3px;
-				left: 4px;
+				top: -3px;
+				left: 6px;
 				background: $white;
 			}
 
@@ -207,8 +207,8 @@ img {
 
 			&:last-child {
 				transform: rotate(-45deg);
-				top: 25px;
-				left: 4px;
+				top: 26px;
+				left: 6px;
 				width: 100%;
 				background: $white;
 			}
